added wk5 folder, project phase 1, and box stuff

--- a/4/Makefile
+++ b/4/Makefile
@@ -1,9 +1,15 @@
 # Makefile for week-4
 
-all: shared_mem shm_io sigset sigset2 strings rvlab4 xwin89
+all: shared_mem shm_io sigset sigset2 strings rvlab4 xwin89 proj phase1
 
 xwin89: xwin89.c
 	gcc xwin89.c -Wall -lX11 -oxwin89
+
+proj: xwin89-proj.c
+	gcc xwin89-proj.c -Wall -lX11 -oproj
+
+phase1: phase1.c
+	gcc phase1.c -Wall -lX11 -ophase1
 
 shared_mem: shared_mem.c
 	gcc shared_mem.c -Wall -oshared_mem
@@ -24,7 +30,7 @@ rvlab4: rvlab4.c
 	gcc rvlab4.c -Wall -orvlab4
 
 clean:
-	rm -f shared_mem shm_io sigset sigset2 strings
+	rm -f shared_mem shm_io sigset sigset2 strings phase1 proj
 
 run:
 	./rvlab4 < myinput; echo "PRINTING LOG\n"; cat log; echo "DONE PRINTING LOG\n";
