updated project and added wk6 files

--- a/practice/Makefile
+++ b/practice/Makefile
@@ -1,5 +1,8 @@
 
-all: fork
+all: fork rw2
 
 fork: fork_test.c
 	gcc fork_test.c -ofork -Wall
+
+rw2: rw_2file.c
+	gcc rw_2file.c -Wall -lpthread -orw2
