--- a/7/Makefile
+++ b/7/Makefile
@@ -1,4 +1,4 @@
-all: a.out dinephil
+all: a.out dinephil rvlab7
 
 a.out: myls.c
 	gcc myls.c -Wall
@@ -6,5 +6,11 @@ a.out: myls.c
 dinephil: dinephil.c
 	gcc dinephil.c -Wall -lpthread -odinephil
 
+rvlab7: rvlab7.c
+	gcc rvlab7.c -Wall -lpthread -orvlab7
+
 clean:
-	rm a.out
+	rm a.out rvlab7 dinephil
+
+run: 
+	./rvlab7 40 10
