added #defines in makefile and logic in phase

--- a/proj/Makefile
+++ b/proj/Makefile
@@ -5,7 +5,7 @@ phase1: phase1.c
 	gcc phase1.c -Wall -lX11 -o phase1
 
 phase2: phase2.c
-	gcc phase2.c -Wall -lX11 -lpthread -o phase2
+	gcc phase2.c -Wall -lX11 -lpthread -o phase2 -DNUM_CHILDREN=20 -DNUM_BOXES=8
 
 clean:
 	rm -f phase1 phase2
