updated wk 9 and gitignore

--- a/9/Makefile
+++ b/9/Makefile
@@ -1,13 +1,13 @@
 
-all: lab9 phase3
+all: lab9 lab9a
 
 lab9: rvlab9.c
 	gcc rvlab9.c -Wall -lX11 -lXext -lpthread -olab9
 
-phase3: rvlab9-sem.c
-	gcc rvlab9-sem.c -g -Wall -lX11 -lXext -lpthread -ophase3
-	gcc rvlab9-sem.c -g -Wall -lX11 -lXext -lpthread -olight -DUSELIGHT=1
+lab9a: rvlab9a.c
+	gcc rvlab9a.c -g -Wall -lX11 -lXext -lpthread -olab9a
+	gcc rvlab9a.c -g -Wall -lX11 -lXext -lpthread -olight -DUSELIGHT=1
 
 clean:
-	rm lab9 phase3
+	rm lab9 lab9a light
 	./cleanipc.sh mkausch
