--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ proj/phase2
 a/lab10
 a/maptest?
 9/lab9a
+practice/b
+b/dotprod
+b/mypipes
+b/pgflt_test
+b/pipetest
+b/rlimit
+b/rvlab11
+b/test
+b/out
+b/cache_check
