--- a/c/Makefile
+++ b/c/Makefile
@@ -2,7 +2,7 @@
 all: phase3
 
 phase3: phase3.c
-	gcc phase3.c -g -Wall -lX11 -lpthread -o phase3 -DNUM_CHILDREN=1 -DNUM_BOXES=5
+	gcc phase3.c -g -Wall -lX11 -lpthread -o phase3 -DNUM_BOXES=5
 
 clean:
 	rm -f phase3
