adding final files from prev semester

--- a/practice/d/Makefile
+++ b/practice/d/Makefile
@@ -1,6 +1,6 @@
 # Makefile for examples week-13
 
-all:	rvlab13 cond-wait timed-wait 
+all:	cond-wait timed-wait 
 CC=gcc
 CFLAGS=-lpthread 
 
@@ -9,9 +9,6 @@ timed-wait:	timed-wait.c
 
 cond-wait:	cond-wait.c
 	gcc -o cond-wait cond-wait.c -Wall -lpthread
-
-rvlab13: rvlab13.c
-	gcc -o rvlab13 rvlab13.c -Wall -lpthread -DNUM_THREADS=19 -DDEBUG=0
 
 nicetest:	nicetest.cpp
 	g++ nicetest.cpp -Wall -o nicetest
@@ -23,4 +20,4 @@ row_reduce_thr:	row_reduce_thr.c
 	${CC} ${CFLAGS} row_reduce_thr.c -Wall -o row_reduce_thr -lm
 
 clean:
-	rm -f *.o nicetest row_reduce_thr row_reduce cond-wait timed-wait rvlab13
+	rm -f *.o nicetest row_reduce_thr row_reduce cond-wait timed-wait
